tests/snapshots/bugs-burst_projector-target_illumination.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills)"
---
capacitor/capacity             = 101250.000000
capacitor/depletes_in          = -1.000000
capacitor/peak                 = 30.032938
capacitor/percentage           = 45.027160
capacitor/recharge             = 3795.000000
capacitor/stable               = true
cpu/capacity                   = 1000.000000
cpu/free                       = 900.000000
defense/armor/hp               = 587500.000000
defense/armor/resist/em        = 50.000000
defense/armor/resist/expl      = 10.000002
defense/armor/resist/kin       = 35.000002
defense/armor/resist/therm     = 35.000002
defense/ehp                    = 1806551.538462
defense/recharge/armor         = 0.000000
defense/recharge/hull          = 0.000000
defense/recharge/passive       = 50.000000
defense/recharge/shield        = 0.000000
defense/shield/hp              = 300000.000000
defense/shield/recharge        = 15000.000000
defense/shield/resist/em       = 0.000000
defense/shield/resist/expl     = 50.000000
defense/shield/resist/kin      = 39.999998
defense/shield/resist/therm    = 19.999999
defense/structure/hp           = 350000.000000
defense/structure/resist/em    = 32.999998
defense/structure/resist/expl  = 32.999998
defense/structure/resist/kin   = 32.999998
defense/structure/resist/therm = 32.999998
drones/active                  = 0.000000
drones/bandwidth               = 0.000000
drones/bandwidth_load          = 0.000000
drones/capacity                = 0.000000
drones/capacity_load           = 0.000000
drones/dps                     = 0.000000
drones/range                   = 60.000000
navigation/agility             = 0.013669
navigation/align_time          = 30.318256
navigation/mass                = 1600000.000000
navigation/speed               = 100.000000
navigation/warp_speed          = 1.500000
offense/alpha                  = 0.000000
offense/dps                    = 0.000000
offense/dps_with_reload        = 0.000000
offense/drone_dps              = 0.000000
power/capacity                 = 1031250.000000
power/free                     = 931250.000000
targeting/lock_range           = 5750.000000
targeting/max_locked_targets   = 14.000000
targeting/scan_resolution      = 75.000000
targeting/sensor_strength      = 194.400000
targeting/signature_radius     = 19010.000000

high_1/type                                     = Target Illumination Burst Projector
high_1/state                                    = active
high_1/capacitorPeakLoad                        = 36.666667
high_1/cycleTime                                = 225000.000000
high_1/durationTargetIlluminationBurstProjector = 225000.000000
