tests/snapshots/bugs-location_bonus_not_on_drones-skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills)"
---
capacitor/capacity             = 6875.000000
capacitor/depletes_in          = -1.000000
capacitor/peak                 = 20.833333
capacitor/percentage           = 100.000000
capacitor/recharge             = 825.000000
capacitor/stable               = true
cpu/capacity                   = 937.500000
cpu/free                       = 937.500000
defense/armor/hp               = 7562.500000
defense/armor/resist/em        = 50.000000
defense/armor/resist/expl      = 10.000002
defense/armor/resist/kin       = 25.000000
defense/armor/resist/therm     = 44.999999
defense/ehp                    = 37155.324470
defense/recharge/armor         = 0.000000
defense/recharge/hull          = 0.000000
defense/recharge/passive       = 12.191667
defense/recharge/shield        = 0.000000
defense/shield/hp              = 9143.750000
defense/shield/recharge        = 1875.000000
defense/shield/resist/em       = 0.000000
defense/shield/resist/expl     = 50.000000
defense/shield/resist/kin      = 39.999998
defense/shield/resist/therm    = 19.999999
defense/structure/hp           = 8937.500000
defense/structure/resist/em    = 32.999998
defense/structure/resist/expl  = 32.999998
defense/structure/resist/kin   = 32.999998
defense/structure/resist/therm = 32.999998
drones/active                  = 5.000000
drones/bandwidth               = 75.000000
drones/bandwidth_load          = 25.000000
drones/capacity                = 75.000000
drones/capacity_load           = 25.000000
drones/dps                     = 0.000000
drones/range                   = 60.000000
navigation/agility             = 0.078300
navigation/align_time          = 11.245453
navigation/mass                = 103600.000000
navigation/speed               = 117.500000
navigation/warp_speed          = 3.000000
offense/alpha                  = 0.000000
offense/dps                    = 0.000000
offense/dps_with_reload        = 0.000000
offense/drone_dps              = 0.000000
power/capacity                 = 11875.000000
power/free                     = 11875.000000
targeting/lock_range           = 135.000000
targeting/max_locked_targets   = 7.000000
targeting/scan_resolution      = 178.750000
targeting/sensor_strength      = 28.800000
targeting/signature_radius     = 440.000000

rig_1/type     = Large Particle Dispersion Augmentor II
rig_1/state    = online
rig_1/drawback = -5.000000

dronebay_1-5/type             = Hornet EC-300
dronebay_1-5/state            = active
dronebay_1-5/hp               = 62.500000
dronebay_1-5/maxVelocity      = 4000.000000
dronebay_1-5/damageMultiplier = 1.500000
dronebay_1-5/shieldCapacity   = 125.000000
dronebay_1-5/armorHP          = 62.500000
