tests/snapshots/bugs-no_charge-combat_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills)"
---
capacitor/capacity             = 437.000000
capacitor/depletes_in          = -1.000000
capacitor/peak                 = 3.812500
capacitor/percentage           = 45.750000
capacitor/recharge             = 131.250000
capacitor/stable               = true
cpu/capacity                   = 162.500000
cpu/free                       = 134.750000
defense/armor/hp               = 562.500000
defense/armor/resist/em        = 50.000000
defense/armor/resist/expl      = 10.000002
defense/armor/resist/kin       = 35.000002
defense/armor/resist/therm     = 35.000002
defense/ehp                    = 2462.901001
defense/recharge/armor         = 0.000000
defense/recharge/hull          = 0.000000
defense/recharge/passive       = 2.333333
defense/recharge/shield        = 0.000000
defense/shield/hp              = 437.500000
defense/shield/recharge        = 468.750000
defense/shield/resist/em       = 0.000000
defense/shield/resist/expl     = 50.000000
defense/shield/resist/kin      = 39.999998
defense/shield/resist/therm    = 19.999999
defense/structure/hp           = 687.500000
defense/structure/resist/em    = 32.999998
defense/structure/resist/expl  = 32.999998
defense/structure/resist/kin   = 32.999998
defense/structure/resist/therm = 32.999998
drones/active                  = 2.000000
drones/bandwidth               = 25.000000
drones/bandwidth_load          = 10.000000
drones/capacity                = 40.000000
drones/capacity_load           = 10.000000
drones/dps                     = 39.599999
drones/range                   = 60.000000
navigation/agility             = 2.322000
navigation/align_time          = 3.360610
navigation/mass                = 1044.000000
navigation/speed               = 393.750000
navigation/warp_speed          = 5.000000
offense/alpha                  = 104.725623
offense/dps                    = 73.399478
offense/dps_with_reload        = 72.907573
offense/drone_dps              = 39.599999
power/capacity                 = 43.750000
power/free                     = 29.450000
targeting/lock_range           = 50.000000
targeting/max_locked_targets   = 5.000000
targeting/scan_resolution      = 750.000000
targeting/sensor_strength      = 10.800000
targeting/signature_radius     = 41.000000

high_1/type                         = Small EMP Smartbomb I
high_1/state                        = active
high_1/damageVolley                 = 50.000000
high_1/speedWithReload              = 7500.000000
high_1/damagePerSecondWithoutReload = 6.666667
high_1/capacitorPeakLoad            = 4.000000
high_1/cycleTime                    = 7500.000000
high_1/cpu                          = 22.500000
high_1/duration                     = 7500.000000
high_1/heatDamage                   = 5.025000

high_2/type                         = Civilian Gatling Autocannon
high_2/state                        = active
high_2/damageVolley                 = 7.762500
high_2/speedWithReload              = 1440.000000
high_2/damagePerSecondWithoutReload = 5.390625
high_2/capacitorPeakLoad            = 0.520833
high_2/cycleTime                    = 1440.000000
high_2/capacitorNeed                = 0.750000
high_2/power                        = 5.400000
high_2/cpu                          = 3.000000
high_2/speed                        = 1440.000000
high_2/maxRange                     = 937.500000
high_2/damageMultiplier             = 1.552500
high_2/falloff                      = 5000.000000
high_2/trackingSpeed                = 812.500000
high_2/heatDamage                   = 0.450000

high_3/type                         = 125mm Gatling AutoCannon II
high_3/state                        = active
high_3/damageVolley                 = 46.963123
high_3/speedWithReload              = 2209.999999
high_3/speedOfReload                = 49.999999
high_3/damagePerSecondWithReload    = 21.250282
high_3/damagePerSecondWithoutReload = 21.742187
high_3/chargeAmount                 = 200.000004
high_3/cycleTime                    = 2160.000000
high_3/power                        = 0.900000
high_3/cpu                          = 2.250000
high_3/speed                        = 2160.000000
high_3/maxRange                     = 600.000000
high_3/damageMultiplier             = 3.913594
high_3/falloff                      = 5375.000000
high_3/trackingSpeed                = 521.250000
high_3/barrageDmgMultiplier         = 3.913594
high_3/barrageFalloff               = 5375.000000
high_3/entityFlyRange               = 250.000000
high_3/heatDamage                   = 0.600000
high_3/charge/type                  = EMP S

dronebay_1-2/type                         = Hobgoblin II
dronebay_1-2/state                        = active
dronebay_1-2/damageVolley                 = 79.199998
dronebay_1-2/speedWithReload              = 4000.000000
dronebay_1-2/damagePerSecondWithoutReload = 19.800000
dronebay_1-2/hp                           = 450.000000
dronebay_1-2/maxVelocity                  = 4200.000000
dronebay_1-2/maxRange                     = 2625.000000
dronebay_1-2/damageMultiplier             = 3.960000
dronebay_1-2/trackingSpeed                = 3.267000
dronebay_1-2/shieldCapacity               = 112.500000
dronebay_1-2/armorHP                      = 202.500000
