tests/snapshots/bugs-no_charge-mining_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills)"
---
capacitor/capacity             = 312.000000
capacitor/depletes_in          = -1.000000
capacitor/peak                 = 6.724444
capacitor/percentage           = 80.693333
capacitor/recharge             = 93.750000
capacitor/stable               = true
cpu/capacity                   = 300.000000
cpu/free                       = 140.000000
defense/armor/hp               = 218.750000
defense/armor/resist/em        = 59.999999
defense/armor/resist/expl      = 10.000002
defense/armor/resist/kin       = 25.000000
defense/armor/resist/therm     = 35.000002
defense/ehp                    = 1085.139428
defense/recharge/armor         = 0.000000
defense/recharge/hull          = 0.000000
defense/recharge/passive       = 1.500000
defense/recharge/shield        = 0.000000
defense/shield/hp              = 281.250000
defense/shield/recharge        = 468.750000
defense/shield/resist/em       = 0.000000
defense/shield/resist/expl     = 50.000000
defense/shield/resist/kin      = 39.999998
defense/shield/resist/therm    = 19.999999
defense/structure/hp           = 250.000000
defense/structure/resist/em    = 32.999998
defense/structure/resist/expl  = 32.999998
defense/structure/resist/kin   = 32.999998
defense/structure/resist/therm = 32.999998
drones/active                  = 0.000000
drones/bandwidth               = 10.000000
drones/bandwidth_load          = 0.000000
drones/capacity                = 10.000000
drones/capacity_load           = 0.000000
drones/dps                     = 0.000000
drones/range                   = 60.000000
navigation/agility             = 2.430000
navigation/align_time          = 4.042434
navigation/mass                = 1200.000000
navigation/speed               = 418.750000
navigation/warp_speed          = 5.000000
offense/alpha                  = 0.000000
offense/dps                    = 0.000000
offense/dps_with_reload        = 0.000000
offense/drone_dps              = 0.000000
power/capacity                 = 56.250000
power/free                     = 49.250000
targeting/lock_range           = 18.750000
targeting/max_locked_targets   = 5.000000
targeting/scan_resolution      = 937.500000
targeting/sensor_strength      = 4.800000
targeting/signature_radius     = 40.000000

high_1/type                 = Miner II
high_1/state                = active
high_1/speedWithReload      = 15000.000000
high_1/capacitorPeakLoad    = 1.200000
high_1/cycleTime            = 15000.000000
high_1/miningAmount         = 58.593750
high_1/miningCritChance     = 0.015000
high_1/miningCritBonusYield = 2.500000

high_2/type                  = Modulated Deep Core Miner II
high_2/state                 = active
high_2/speedWithReload       = 45000.010000
high_2/speedOfReload         = 0.010000
high_2/chargeAmount          = 1.000000
high_2/capacitorPeakLoad     = 0.408889
high_2/cycleTime             = 45000.000000
high_2/capacitorNeed         = 18.400000
high_2/miningAmount          = 205.078125
high_2/specialtyMiningAmount = 205.078125
high_2/miningCritChance      = 0.015000
high_2/miningCritBonusYield  = 2.500000
high_2/charge/type           = Veldspar Mining Crystal II
