tests/snapshots/bugs-nosferatu_income-depletes_skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills)"
---
ship/type                                    = Punisher
ship/scanStrength                            = 10.000000
ship/passiveShieldEffectiveRechargeRate      = 1.931034
ship/passiveShieldRechargeRate               = 1.400000
ship/armorEffectiveRepairRate                = 22.716049
ship/armorRepairRate                         = 15.333333
ship/velocityBoost                           = 119.822485
ship/ehp                                     = 1895.141133
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.187500
ship/armorExplosiveDamageEffectiveResonance  = 0.200000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 482.758615
ship/hullEhp                                 = 671.641774
ship/armorEhp                                = 740.740744
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/powerFree                               = 29.000000
ship/cpuFree                                 = 45.000000
ship/capacitorDepletesIn                     = 240.000000
ship/capacitorPeakDeltaPercentage            = -9.866667
ship/capacitorPeakDelta                      = -0.616667
ship/capacitorPeakLoad                       = 6.866667
ship/capacitorPeakRecharge                   = 6.250000
ship/alignTime                               = 6.794229
ship/mass                                    = 1690000.000000
ship/powerLoad                               = 38.000000
ship/maxVelocity                             = 780.369822
ship/cpuLoad                                 = 95.000000
ship/shipBonusAF                             = 0.000000
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000

low_1/type              = Small Armor Repairer II
low_1/state             = active
low_1/armorRepairRate   = 15.333333
low_1/capacitorPeakLoad = 6.666667
low_1/cycleTime         = 6000.000000

medium_1/type              = 1MN Afterburner II
medium_1/state             = active
medium_1/capacitorPeakLoad = 2.200000
medium_1/cycleTime         = 10000.000000

medium_2/type              = Warp Disruptor II
medium_2/state             = active
medium_2/capacitorPeakLoad = 6.000000
medium_2/cycleTime         = 5000.000000

high_1-2/type              = Small Energy Nosferatu II
high_1-2/state             = active
high_1-2/capacitorPeakLoad = -4.000000
high_1-2/cycleTime         = 2500.000000
